added generation number

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,12 @@
     margin: auto;
     margin-top: 2%;
   }
+  .gen{
+    color: #fff;
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: bold;
+  }
   
   .board {
     height: 90vh;
