put just play button back

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,9 +80,11 @@
   .btn{
     margin: 10px;
   }
-  .loop{
-    color: #fff;
+  .music{
+    margin: 10px;
+    text-align: center;
   }
+  
   
   .interval {
   display:flexbox;
